@@ -4,12 +4,12 @@ cmake_minimum_required(VERSION 2.8.2)
 project (arctic)
 
 # Juce dependencies.
-set (JUCE_DEP_LIBS rt dl X11 Xext freetype)
+set (JUCE_DEP_LIBS rt dl GL X11 Xext freetype)
 
 if (JUCE_PATH)
     # Point at a custom pre-built Juce build.  Most of the time you will want
     # this, because most systems do not come w/Juce by default.
-    set (EXTRA_LIBS ${EXTRA_LIBS} "${JUCE_PATH}/extras/static library/Builds/Linux/build/libjuce.a" ${JUCE_DEP_LIBS})
+    set (EXTRA_LIBS ${EXTRA_LIBS} "${JUCE_PATH}/Builds/Linux/build/libjuce.a" ${JUCE_DEP_LIBS})
 else (JUCE_PATH)
     # Assume the Juce library has been installed on the system and is available
     # as a dynamic library called "juce".
@@ -39,7 +39,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
 
 add_subdirectory(uiJuce)
 
-add_executable(arctic aThread.c aSystem.c board.c clock.c comp.c conio.c game.c gDynamic.c gPreCalc.c list.c log.c main.c move.c moveList.c playloop.c pv.c saveGame.c switcher.c thinker.c transTable.c uiNcurses.c uiUci.c uiUtil.c uiXboard.c variant.c)
+add_executable(arctic aThread.c aSystem.c board.c clock.c comp.c conio.c game.c gDynamic.c gPreCalc.c list.c log.c main.c move.c moveList.c playloop.c position.c pv.c saveGame.c switcher.c thinker.c transTable.c uiNcurses.c uiUci.c uiUtil.c uiXboard.c variant.c)
 
 # ncursesw is necessary for a UTF-8 console cursor.
 target_link_libraries(arctic ncursesw pthread uiJuce ${EXTRA_LIBS})
