@@ -17,6 +17,7 @@
 #ifndef BOARD_COMPONENT_H
 #define BOARD_COMPONENT_H
 
+#include "../AppConfig.h"
 #include "juce_gui_basics/juce_gui_basics.h" // juce::Component
 
 #include "board.h"
