@@ -17,6 +17,7 @@
 #ifndef MAINCOMPONENT_H
 #define MAINCOMPONENT_H
 
+#include "../AppConfig.h"
 #include "juce_gui_basics/juce_gui_basics.h" // juce::Component
 #include "BoardComponent.h"
 
