@@ -17,6 +17,7 @@
 #ifndef PIECECACHE_H
 #define PIECECACHE_H
 
+#include "../AppConfig.h"
 #include "juce_gui_basics/juce_gui_basics.h" // juce::Drawable
 #include "ref.h"
 
